[project]
name = "lc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-session>=0.8.0",
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.18",
    "langchain-openai>=0.1.0",
    "dashscope>=1.14.0",
    "streamlit>=1.56.0",
]